[package]
name = "wget"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.12.12", features = ["stream", "json"] }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
futures-util = "0.3"
chrono = "0.4"
scraper = "0.22.0"        # Pour le parsing HTML
url = "2.4"             # Pour la manipulation des URLs
regex = "1.9"           # Pour les patterns de rejet